[gd_scene load_steps=4 format=2]

[ext_resource path="res://Shared/Art/Icons/MapNoteIcon.png" type="Texture" id=1]
[ext_resource path="res://maps/MapLocation.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 69.5, 29.5 )

[node name="MapNote" type="Area2D" groups=["info"]]
modulate = Color( 1, 1, 1, 0.333333 )
script = ExtResource( 2 )
info_text = "Bellweather Crematorium: 

The site of the spirit bells and the rookery for the deathseeker crows. Bodies recovered by the Spirit Wardens are incinerated in electroplasm here to destroy their ghosts."

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MapNoteTexture" type="NinePatchRect" parent="."]
margin_left = -75.0
margin_top = -40.0
margin_right = 79.0
margin_bottom = 37.0
rect_min_size = Vector2( 100, 50 )
rect_pivot_offset = Vector2( -170, -76 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MapNoteTexture"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Bellweather
Cremetorium"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="area_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="input_event" from="." to="." method="_on_MapNote_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
